fixed overflow in css

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,10 @@
 }
 
 html,
-body,
+body{
+  overflow-x: hidden;
+}
+
 #root,
 .app{
     height: 100%;
